tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_label_double_hash.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"##draft\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "##draft"
