tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_label_in_paragraph.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"see #rust later\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "see "
Style::new().fg(Color::Rgb(254, 128, 25)).bold() | "#rust"
Style::new().fg(Color::Rgb(235, 219, 178)) | " later"
