tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_label_inside_inline_code.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"use `#foo` here\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "use "
Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(80, 73, 69)) | "#foo"
Style::new().fg(Color::Rgb(235, 219, 178)) | " here"
