tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_label_inside_link_display_text.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"[#todo](notes/project.md)\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(250, 189, 47)).underlined() | "#todo"
